--- a/StreamlitSQL Dockerized Application/Dockerfile
+++ b/StreamlitSQL Dockerized Application/Dockerfile
@@ -1,8 +1,16 @@
 FROM python:3.9
 
+# Set working directory
 WORKDIR /app
 
+# Copy app files
 COPY main.py .
+
+# Install required Python packages
 RUN pip install streamlit psycopg2
 
-CMD ["streamlit", "run", "main.py", "--server.port=8501", "--server.address=0.0.0.0"]
+# Expose the port your app will run on
+EXPOSE 8502
+
+# Run the Streamlit app
+CMD ["streamlit", "run", "main.py", "--server.port=8502", "--server.address=0.0.0.0"]
